--- a/ingress-nginx-controller.yaml
+++ b/ingress-nginx-controller.yaml
@@ -263,7 +263,12 @@ pipeline:
       cat /etc/ld.so.conf
 
       mkdir -p ${{targets.destdir}}/etc/nginx/
-      cp -ar /etc/nginx/ ${{targets.destdir}}/etc/nginx/
+      
+      # Geo ip data from nginx image
+      cp -ar images/nginx/rootfs/etc/nginx ${{targets.destdir}}/etc/nginx/
+      
+      # Lua code copied into the target 
+      cp -ar rootfs/etc/nginx ${{targets.destdir}}/etc/nginx/
 
       # Get Brotli source and deps
       echo "::::::::::::::::::::::::::::::::::::::"
