fix for ingress build
Signed-off-by: James Strong <strong.james.e@gmail.com>

--- a/ingress-nginx-controller.yaml
+++ b/ingress-nginx-controller.yaml
@@ -2,11 +2,46 @@
 package:
   name: ingress-nginx-controller
   version: 1.8.0
-  epoch: 5
+  epoch: 6
   description: "Ingress-NGINX Controller for Kubernetes"
   copyright:
     - license: Apache-2.0
-
+  dependencies:
+    runtime:
+      - curl
+      - curl-dev
+      - openssh-client
+      - opentracing-cpp
+      - jaeger-cpp
+      - msgpack
+      - datadog-cpp
+      - yaml-cpp
+      - zipkin-cpp
+      - ssdeep
+      - luajit
+      - luajit-dev
+      - lua-cjson
+      - lua-resty-balancer
+      - lua-resty-cache
+      - lua-resty-cookie
+      - lua-resty-core
+      - lua-resty-dns
+      - lua-resty-global-throttle
+      - lua-resty-http
+      - lua-resty-ipmatcher
+      - lua-resty-lock
+      - lua-resty-memcached
+      - lua-resty-redis
+      - lua-resty-string
+      - lua-resty-upload
+      - ca-certificates-bundle
+      - brotli-dev
+      - gd-dev
+      - geoip-dev
+      - libmaxminddb-dev
+      - libxml2-dev
+      - libxslt-dev
+      
 environment:
   contents:
     packages:
@@ -159,6 +194,8 @@ pipeline:
 
       setcap cap_net_bind_service=+ep ${{targets.destdir}}/nginx-ingress-controller \
       && setcap -v cap_net_bind_service=+ep ${{targets.destdir}}/nginx-ingress-controller
+
+      getcap ${{targets.destdir}}/nginx-ingress-controller
 
   - uses: fetch
     with:
@@ -485,8 +522,8 @@ pipeline:
        echo ":::: SETCAP DUMB INIT                  ::::"
        echo "::::::::::::::::::::::::::::::::::::::::::"
 
-      setcap cap_net_bind_service=+ep /usr/bin/dumb-init \
-        && setcap -v cap_net_bind_service=+ep /usr/bin/dumb-init
+      setcap cap_net_bind_service=+ep ${{targets.destdir}}/usr/bin/dumb-init \
+        && setcap -v cap_net_bind_service=+ep ${{targets.destdir}}/usr/bin/dumb-init
 
 
       echo "::::::::::::::::::::::::::::::::::::::::::::"
@@ -514,6 +551,10 @@ pipeline:
       ${BUILD_PATH}/ModSecurity-nginx-"${{vars.MODSECURITY_NGINX_VERSION}}"  \
       ${BUILD_PATH}/ngx_http_geoip2_module-"${{vars.GEOIP2_VERSION}}"  \
       ${BUILD_PATH}/ngx_brotli
+
+      # Create symlinks to redirect nginx logs to stdout and stderr docker log collector
+      ln -sf /dev/stdout /var/log/nginx/access.log \
+      && ln -sf /dev/stderr /var/log/nginx/error.log
 
 update:
   enabled: true
