scontroller starts but still having issues with webhook

--- a/ingress-nginx-controller.yaml
+++ b/ingress-nginx-controller.yaml
@@ -2,7 +2,7 @@
 package:
   name: ingress-nginx-controller
   version: 1.8.0
-  epoch: 6
+  epoch: 7
   description: "Ingress-NGINX Controller for Kubernetes"
   copyright:
     - license: Apache-2.0
@@ -11,6 +11,10 @@ package:
       - curl
       - curl-dev
       - openssh-client
+      - ca-certificates-bundle
+      - ca-certificates
+      - openssl
+      - openssl-dev      
       - opentracing-cpp
       - jaeger-cpp
       - msgpack
