nginx-ingress-controller: add compat subpackage
Signed-off-by: James Rawlings <jrawlings@chainguard.dev>

--- a/ingress-nginx-controller.yaml
+++ b/ingress-nginx-controller.yaml
@@ -560,6 +560,17 @@ pipeline:
       ln -sf /dev/stdout /var/log/nginx/access.log \
       && ln -sf /dev/stderr /var/log/nginx/error.log
 
+subpackages:
+  - name: ingress-nginx-controller-compat
+    description: Compatibility package for ingress-nginx-controller
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.destdir}}/usr/local/bin
+          ln -s /usr/local/nginx/sbin/nginx ${{targets.destdir}}/usr/local/bin/nginx
+
+          mkdir -p ${{targets.destdir}}/usr/bin
+          ln -s /usr/local/nginx/sbin/nginx ${{targets.destdir}}/usr/bin/nginx
+
 update:
   enabled: true
   github:
