--- a/mimalloc.yaml
+++ b/mimalloc.yaml
@@ -28,7 +28,7 @@ pipeline:
 
 subpackages:
   - name: "mimalloc-dev"
-    description: "headers for mimalloc2"
+    description: "headers for mimalloc"
     pipeline:
       - uses: split/dev
     dependencies:
