--- a/ingress-nginx-controller.yaml
+++ b/ingress-nginx-controller.yaml
@@ -2,7 +2,7 @@
 package:
   name: ingress-nginx-controller
   version: 1.8.0
-  epoch: 5
+  epoch: 6
   description: "Ingress-NGINX Controller for Kubernetes"
   copyright:
     - license: Apache-2.0
@@ -123,6 +123,7 @@ environment:
       - lua-resty-redis
       - lua-resty-string
       - lua-resty-upload
+      - modsecurity
 
 vars:
   NGINX_VERSION: "1.21.6"
@@ -272,12 +273,6 @@ pipeline:
 
   - uses: fetch
     with:
-      uri: https://github.com/SpiderLabs/ModSecurity-nginx/archive/v${{vars.MODSECURITY_NGINX_VERSION}}.tar.gz
-      expected-sha256: ${{vars.MODSECURITY_NGINX_VERSION_SHA}}
-      strip-components: 0
-
-  - uses: fetch
-    with:
       uri: https://github.com/leev/ngx_http_geoip2_module/archive/${{vars.GEOIP2_VERSION}}.tar.gz
       expected-sha256: ${{vars.GEOIP2_VERSION_SHA}}
       strip-components: 0
@@ -310,48 +305,6 @@ pipeline:
 
       # Lua code copied into the target
       cp -ar rootfs/etc/nginx/. ${{targets.destdir}}/etc/nginx/
-
-      # Get Brotli source and deps
-      echo "::::::::::::::::::::::::::::::::::::::"
-      echo ":::: ngx_brotl ::::"
-      echo "::::::::::::::::::::::::::::::::::::::"
-      cd "$BUILD_PATH"
-      git clone --depth=1 https://github.com/google/ngx_brotli.git
-      cd ngx_brotli
-      git submodule init
-      git submodule update
-
-      cd "$BUILD_PATH"
-      git clone -n https://github.com/SpiderLabs/ModSecurity
-      cd ModSecurity/
-      git branch
-      git checkout ${{vars.MODSECURITY_LIB_VERSION}}
-      git submodule init
-      git submodule update
-
-      sh build.sh
-
-      # https://github.com/SpiderLabs/ModSecurity/issues/1909#issuecomment-465926762
-      sed -i '115i LUA_CFLAGS="${LUA_CFLAGS} -DWITH_LUA_JIT_2_1"' build/lua.m4
-      sed -i '117i AC_SUBST(LUA_CFLAGS)' build/lua.m4
-
-      ./configure \
-      --disable-doxygen-doc \
-      --disable-doxygen-html \
-      --disable-examples
-
-      make -j$(nproc)
-      make install
-
-      mkdir -p ${{targets.destdir}}/etc/nginx/modsecurity
-      cp modsecurity.conf-recommended ${{targets.destdir}}/etc/nginx/modsecurity/modsecurity.conf
-      cp unicode.mapping ${{targets.destdir}}/etc/nginx/modsecurity/unicode.mapping
-
-      # Replace serial logging with concurrent
-      sed -i 's|SecAuditLogType Serial|SecAuditLogType Concurrent|g' ${{targets.destdir}}/etc/nginx/modsecurity/modsecurity.conf
-
-      # Concurrent logging implies the log is stored in several files
-      echo "SecAuditLogStorageDir /var/log/audit/" >> ${{targets.destdir}}/etc/nginx/modsecurity/modsecurity.conf
 
       # Download owasp modsecurity crs
       cd ${{targets.destdir}}/etc/nginx/
@@ -556,21 +509,28 @@ pipeline:
       ${BUILD_PATH}/ngx_http_geoip2_module-"${{vars.GEOIP2_VERSION}}"  \
       ${BUILD_PATH}/ngx_brotli
 
-      # Create symlinks to redirect nginx logs to stdout and stderr docker log collector
-      ln -sf /dev/stdout /var/log/nginx/access.log \
-      && ln -sf /dev/stderr /var/log/nginx/error.log
-
 subpackages:
   - name: ingress-nginx-controller-compat
     description: Compatibility package for ingress-nginx-controller
+    dependencies:
+      runtime:
+        - modsecurity-config
     pipeline:
       - runs: |
-          mkdir -p ${{targets.destdir}}/usr/local/bin
-          ln -s /usr/local/nginx/sbin/nginx ${{targets.destdir}}/usr/local/bin/nginx
+          mkdir -p ${{targets.subpkgdir}}/usr/local/bin
+          ln -s /usr/local/nginx/sbin/nginx ${{targets.subpkgdir}}/usr/local/bin/nginx
 
-          mkdir -p ${{targets.destdir}}/usr/bin
-          ln -s /usr/local/nginx/sbin/nginx ${{targets.destdir}}/usr/bin/nginx
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
+          ln -s /usr/local/nginx/sbin/nginx ${{targets.subpkgdir}}/usr/bin/nginx
 
+          mkdir -p ${{targets.subpkgdir}}/etc/nginx
+          ln -s /etc/modsecurity/modsecurity.conf-concurrent ${{targets.subpkgdir}}/etc/nginx/modsecurity/modsecurity.conf
+          ln -s /etc/modsecurity/unicode.mapping ${{targets.subpkgdir}}/etc/nginx/modsecurity/unicode.mapping
+
+          mkdir -p ${{targets.subpkgdir}}/var/log/nginx
+          # Create symlinks to redirect nginx logs to stdout and stderr docker log collector
+          ln -sf /dev/stdout ${{targets.subpkgdir}}/var/log/nginx/access.log
+          ln -sf /dev/stderr ${{targets.subpkgdir}}/var/log/nginx/error.log
 update:
   enabled: true
   github:
