--- a/modsecurity.yaml
+++ b/modsecurity.yaml
@@ -1,7 +1,7 @@
 package:
   name: modsecurity
   version: 3.0.10
-  epoch: 2
+  epoch: 3
   description: "ModSecurity is an open source, cross platform web application firewall (WAF) engine"
   copyright:
     - license: Apache-2.0
@@ -61,6 +61,21 @@ subpackages:
     pipeline:
       - uses: split/static
     description: modsecurity static libraries
+
+  - name: modsecurity-config
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/etc/modsecurity
+          cp modsecurity.conf-recommended ${{targets.subpkgdir}}/etc/modsecurity/
+          cp modsecurity.conf-recommended ${{targets.subpkgdir}}/etc/modsecurity/modsecurity.conf-concurrent
+          cp unicode.mapping ${{targets.subpkgdir}}/etc/modsecurity/
+
+          # Replace serial logging with concurrent
+          sed -i 's|SecAuditLogType Serial|SecAuditLogType Concurrent|g' ${{targets.subpkgdir}}/etc/modsecurity/modsecurity.conf-concurrent
+
+          # Concurrent logging implies the log is stored in several files
+          echo "SecAuditLogStorageDir /var/log/audit/" >> ${{targets.subpkgdir}}/etc/modsecurity/modsecurity.conf-concurrent
+    description: modsecurity configuration files
 
 update:
   enabled: true
