--- a/py3-deprecation.yaml
+++ b/py3-deprecation.yaml
@@ -1,13 +1,14 @@
-# Generated from https://pypi.org/project/pywin32/
+# Generated from https://pypi.org/project/deprecation/
 package:
-  name: py3-pywin32
-  version: 306
+  name: py3-deprecation
+  version: 2.1.0
   epoch: 0
-  description: Python for Window Extensions
+  description: A library to handle automated deprecations
   copyright:
-    - license: PSF
+    - license: Apache 2
   dependencies:
     runtime:
+      - py3-packaging
       - python-3
 
 environment:
@@ -23,9 +24,9 @@ environment:
 pipeline:
   - uses: git-checkout
     with:
-      expected-commit: bff5b3ac44596eff8a30dea139b1c63cf2487931
-      repository: https://github.com/mhammond/pywin32
-      tag: b${{package.version}}
+      expected-commit: c2c1e6b4360b0d1c4de48a61187a2173321ec7b9
+      repository: https://github.com/briancurtin/deprecation
+      tag: ${{package.version}}
 
   - name: Python Build
     uses: python/build-wheel
@@ -36,5 +37,4 @@ update:
   enabled: true
   manual: false
   github:
-    identifier: mhammond/pywin32
-    strip-prefix: b
+    identifier: briancurtin/deprecation
